# Assignment_03

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  check_postgres_health.sh  check_postgres_quick.sh  concept_database.py  concept_note_quality_report.md  diagnose_structure.py  docker-compose.yaml  fix_postgres_auth.sh  fix_postgres_wsl.sh  install_postgres_wsl.sh  main.py  pyproject.toml  requirements-rag.txt  run_fastapi.py  setup_postgres_wsl.sh  start_postgres_daemon.sh  steps.txt  test_extraction.py  test_relevance_check.py  test_wsl_postgres_from_windows.ps1  troubleshoot_postgres.sh
.github/workflows/: deploy.yml
backends/: rag_fastapi_server.py
pilots/: WSL_PGADMIN4_ALTERNATIVES.md  WSL_POSTGRESQL_SETUP.md  __init__.py  chat_app.py  diagnose_structure.py  inspect_doc.py  inspect_page_image.py  inspect_picture_attrs.py  main_api.py  rag_lc_anthropic.py  rag_lc_openai.py  rag_streamlit_app.py  test_db_connection.py  test_extraction.py  wikipedia_search.py
setup/: auto_start_postgres.sh  init_database.py  setup_aws_wsl.sh
src/: __init__.py  quickstart.py
src/backends/: __init__.py  enhanced_fastapi_server.py  rag_fastapi_server.py
src/dags/: financial_terms_enrichment_dag.py  fintbx_ingest_dag.py  master_orchestration_dag.py  parsing_dag.py  parsing_dag_v2.py  split_large_pdfs.py  storing_dag.py
src/enrichment/: financial_terms_enrichment.py
src/frontend/: __init__.py  rag_streamlit_frontend.py
src/parse/: docling_extractor.py  docling_extractor_old.py  docling_extractor_v2.py  pdf_generator.py  pdf_generator_v2.py  (+5 more)
(+9 files in other folders)
