[project]
name = "assignment-03"
version = "0.1.0"
description = "ChatBot with OpenAI API using FastAPI and Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "openai>=2.3.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.39.0",
    "requests>=2.32.0",
]

