[project]
name = "assignment-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "openai>=2.3.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.39.0",
    "requests>=2.32.0",
    "docling>=2.57.0",
    "transformers>=4.34.0,<5.0.0",
    "dvc[s3]>=3.63.0",
    "awscli>=1.42.18",
    "onnxruntime-gpu>=1.23.0",
    "pymupdf>=1.26.5",
]
