[project]
name = "assignment-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.58",
    "fastapi>=0.119.1",
    "instructor>=1.11.3",
    "langchain-openai>=1.0.0",
    "pinecone>=7.3.0",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
    "wikipedia>=1.4.0",
]
